--- a/app/src/main/res/layout/fragment_note_edit_data.xml
+++ b/app/src/main/res/layout/fragment_note_edit_data.xml
@@ -1,13 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.NoteEditDataFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            tools:context=".EditDataActivity">
+
+        <androidx.cardview.widget.CardView
+                android:id="@+id/note_edit_card"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                app:cardElevation="4dp"
+                app:cardCornerRadius="5dp"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/note_edit_data_constraint_layout"
+                                                               android:layout_width="match_parent"
+                                                               android:layout_height="match_parent"
+                                                               android:background="@color/lightgrey">
+
+                <EditText
+                        android:id="@+id/note_edit_title_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginEnd="24dp"
+                        android:layout_marginLeft="24dp"
+                        android:layout_marginRight="24dp"
+                        android:hint="@string/note_title_preview"
+                        android:maxLength="32"
+                        android:inputType="text"
+                        android:autofillHints=""
+
+
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toTopOf="@id/note_edit_data_text"/>
+
+                <EditText
+                        android:id="@+id/note_edit_data_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_margin="2dp"
+
+                        android:hint="@string/note_text_preview"
+                        android:autofillHints=""
+                        android:scrollHorizontally="false"
+                        android:background="@null"
+                        android:inputType="textMultiLine"
+                        android:gravity="top"
+
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/note_edit_title_text"
+                        app:layout_constraintBottom_toTopOf="@id/note_edit_footer_relative_layout"/>
+
+                <LinearLayout android:id="@+id/note_edit_footer_relative_layout"
+                              android:layout_width="match_parent"
+                              android:layout_height="40dp"
+                              android:background="@color/grey"
+                              android:orientation="horizontal"
+                              android:baselineAligned="false"
+
+                              app:layout_constraintBottom_toBottomOf="parent"
+                              app:layout_constraintLeft_toLeftOf="parent"
+                              app:layout_constraintLeft_toRightOf="parent">
+
+                    <Button android:id="@+id/note_edit_leave_button"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/back"
+                            android:layout_weight="1"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:textColor="@color/white"/>
+
+                    <Button android:id="@+id/note_edit_color_button"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/color"
+                            android:layout_weight="1"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:textColor="@color/white"/>
+
+                    <Button android:id="@+id/note_edit_submit_button"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/submit"
+                            android:layout_weight="1"
+                            style="@style/Widget.AppCompat.Button.Borderless"
+                            android:textColor="@color/white"/>
+
+                </LinearLayout>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
