--- a/app/src/main/res/layout/fragment_note_set_data.xml
+++ b/app/src/main/res/layout/fragment_note_set_data.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.ToDoSetDataFragment">
@@ -11,7 +12,7 @@
             tools:context=".SetDataActivity">
 
         <androidx.cardview.widget.CardView
-                android:id="@+id/note_edit_card"
+                android:id="@+id/note_set_card"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="10dp"
@@ -28,13 +29,13 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/note_data_constraint_layout"
+            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/note_set_data_constraint_layout"
                                                                android:layout_width="match_parent"
                                                                android:layout_height="match_parent"
                                                                android:background="@color/lightgrey">
 
                 <EditText
-                        android:id="@+id/note_title_text"
+                        android:id="@+id/note_set_title_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -51,10 +52,10 @@
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toTopOf="@id/note_data_text"/>
+                        app:layout_constraintBottom_toTopOf="@id/note_set_data_text"/>
 
                 <EditText
-                        android:id="@+id/note_data_text"
+                        android:id="@+id/note_set_data_text"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_margin="2dp"
@@ -68,10 +69,10 @@
 
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/note_title_text"
-                        app:layout_constraintBottom_toTopOf="@id/note_footer_relative_layout"/>
+                        app:layout_constraintTop_toBottomOf="@id/note_set_title_text"
+                        app:layout_constraintBottom_toTopOf="@id/note_set_footer_relative_layout"/>
 
-                <LinearLayout android:id="@+id/note_footer_relative_layout"
+                <LinearLayout android:id="@+id/note_set_footer_relative_layout"
                               android:layout_width="match_parent"
                               android:layout_height="40dp"
                               android:background="@color/grey"
@@ -82,7 +83,7 @@
                               app:layout_constraintLeft_toLeftOf="parent"
                               app:layout_constraintLeft_toRightOf="parent">
 
-                    <Button android:id="@+id/note_leave_button"
+                    <Button android:id="@+id/note_set_leave_button"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:text="@string/back"
@@ -90,7 +91,7 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:textColor="@color/white"/>
 
-                    <Button android:id="@+id/note_color_button"
+                    <Button android:id="@+id/note_set_color_button"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:text="@string/color"
@@ -98,7 +99,7 @@
                             style="@style/Widget.AppCompat.Button.Borderless"
                             android:textColor="@color/white"/>
 
-                    <Button android:id="@+id/note_submit_button"
+                    <Button android:id="@+id/note_set_submit_button"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:text="@string/submit"
